<resources>
    <string name="app_name">TimeTrack</string>

    <string name="notifications">Periodic Reminders</string>
    <string name="notifications_on">ON</string>
    <string name="notifications_off">OFF</string>

    <string name="action_settings">Settings</string>
    <string name="action_view_logs">View Logs</string>

    <string name="title_activity_display_message">Tasks Completed</string>
    <string name="title_settings_message">Settings</string>
    <string name="title_reminder_message">Tasks Completed</string>
    <string name="title_view_logs">View Logs</string>

    <string name="task_placeholder"></string>
    <string name="edit_message_hint">Description of completed tasks</string>
    <string name="save_content">Save</string>
    <string name="cancel_content">Cancel</string>

    <string name="test_notifications">Test Reminder</string>
    <string name="test_push_button">Ping</string>

    <string name="time_between_notifications">Time Between Reminders</string>
    <string-array name="time_between_notify">
        <item>0.5</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>6</item>
        <item>12</item>
        <item>24</item>
    </string-array>
    <string name="units_between_notifications">hours</string>

    <string name="null_content">None</string>
</resources>
