<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">
        <TextView
            android:text="@string/notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

        <ToggleButton
            android:id="@+id/togglebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/notifications_on"
            android:textOff="@string/notifications_off"
            android:onClick="onNotificationsToggleClicked"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/hourslog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
