<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.henrystudios.henry.timetrack.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:text="@string/test_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:textSize="20sp"/>

        <Button
            android:text="@string/test_push_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sendPushNotification"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:text="@string/time_between_notifications"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingRight="30dp"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/time_between_reminders"
            android:layout_width="60dp"
            android:dropDownWidth="60dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"></Spinner>

        <TextView
            android:text="@string/units_between_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:textSize="20sp"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
</LinearLayout>